--- a/beda-bahan-tumbler-stainless.html
+++ b/beda-bahan-tumbler-stainless.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/beda-bahan-tumbler-stainless.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/beda-bahan-tumbler-stainless.html">
     <title>Beda Bahan Tumbler Stainless SUS 304 vs 316: Mana yang Aman? | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
