--- a/blog-3.html
+++ b/blog-3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/blog-3.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/blog-3.html">
     <title>Blog & Wawasan Souvenir Kantor - Page 3 | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Temukan strategi branding dan tips memilih merchandise kantor terbaik untuk perusahaan Anda.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/blog-3.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/blog-3.html">
     <meta property="og:type" content="blog">
 
     <!-- Fonts & Icons -->
@@ -329,9 +329,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
