--- a/category-drinkware.html
+++ b/category-drinkware.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/category-drinkware.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-drinkware.html">
     <title>Souvenir Tumbler & Drinkware Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Mulai dari Tumbler Stainless Tahan Panas hingga Mug Keramik. Solusi souvenir paling fungsional dan populer.">
     <meta property="og:image" content="assets/cat-drinkware.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/category-drinkware.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-drinkware.html">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -212,7 +212,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Souvenir Tumbler & Drinkware",
       "description": "Koleksi souvenir botol minum custom logo. Thermos Stainless, Sport Bottle, Mug Keramik, dan Tumbler Kekinian.",
-      "url": "https://vendorsouvenir.web.id/category-drinkware.html",
+      "url": "https://hampersmalang.web.id/category-drinkware.html",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -442,9 +442,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
