--- a/category-gadget.html
+++ b/category-gadget.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/category-gadget.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-gadget.html">
     <title>Souvenir Gadget & Teknologi Custom Logo | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan citra perusahaan dengan souvenir teknologi premium. Powerbank, Flashdisk, Speaker. Garansi kualitas.">
     <meta property="og:image" content="assets/cat-tech.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/category-gadget.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-gadget.html">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -213,7 +213,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Souvenir Gadget & Teknologi",
       "description": "Koleksi souvenir gadget custom logo untuk perusahaan. Powerbank, Flashdisk, Speaker Bluetooth, dan Aksesoris Meja Kerja.",
-      "url": "https://vendorsouvenir.web.id/category-gadget.html",
+      "url": "https://hampersmalang.web.id/category-gadget.html",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -436,9 +436,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
