--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/">
-    <title>Vendor Souvenir Kantor Surabaya & Indonesia Timur (Custom & Express) | Maroon Souvenir</title>
+    <link rel="canonical" href="https://hampersmalang.web.id/">
+    <title>Vendor Hampers Malang - Parcel & Gift Set Premium Custom | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Pusat Vendor Souvenir Kantor Terpercaya di Surabaya & Indonesia Timur. Jual souvenir perusahaan custom, paket seminar kit murah, dan corporate gift premium. Ready stock & bisa rush order 1 hari.">
+        content="Vendor Hampers Malang Terpercaya. Jual parcel lebaran, hampers premium, gift set custom untuk perusahaan & personal. Packaging eksklusif, pengiriman cepat ke seluruh Malang Raya.">
     <meta name="keywords"
-        content="vendor souvenir kantor surabaya, jual souvenir perusahaan custom, pusat grosir seminar kit indonesia timur, cetak tumbler kilat, souvenir kantor ready stock, paket seminar kit express">
+        content="vendor hampers malang, jual parcel malang, hampers lebaran malang, gift set premium malang, parcel perusahaan malang, hampers custom malang, parcel natal malang">
     <meta name="author" content="Maroon Souvenir">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Maroon Souvenir - Vendor Corporate Gift Premium">
+    <meta property="og:title" content="Vendor Hampers Malang - Parcel & Gift Set Premium">
     <meta property="og:description"
-        content="Solusi souvenir kantor high-end untuk branding perusahaan Anda. Garansi kualitas dan ketepatan waktu.">
+        content="Solusi hampers & parcel premium untuk perusahaan dan personal di Malang. Packaging eksklusif, kualitas terjamin.">
     <meta property="og:image" content="assets/hero-souvenir.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id">
+    <meta property="og:url" content="https://hampersmalang.web.id">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -33,21 +33,21 @@
       "@type": "LocalBusiness",
       "name": "PT. Maroon Digital Kreasi (Maroon Souvenir)",
       "image": "assets/hero-souvenir.png",
-      "@id": "https://vendorsouvenir.web.id",
-      "url": "https://vendorsouvenir.web.id",
+      "@id": "https://hampersmalang.web.id",
+      "url": "https://hampersmalang.web.id",
       "telephone": "+62895639068080",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Jl. Rungkut Industri Raya No. 10",
-        "addressLocality": "Rungkut",
-        "addressRegion": "Surabaya",
-        "postalCode": "60293",
+        "streetAddress": "Jl. Soekarno Hatta No. 9",
+        "addressLocality": "Lowokwaru",
+        "addressRegion": "Malang",
+        "postalCode": "65141",
         "addressCountry": "ID"
       },
       "geo": {
         "@type": "GeoCoordinates",
-        "latitude": "-6.2088",
-        "longitude": "106.8456"
+        "latitude": "-7.9666",
+        "longitude": "112.6326"
       },
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
@@ -142,17 +142,16 @@
         <div class="container hero-content">
             <div class="hero-text">
                 <span class="badge badge-yellow">
-                    <i class="fa-solid fa-star"></i> Pilihan No.1 Korporat
+                    <i class="fa-solid fa-star"></i> Pilihan No.1 di Malang
                 </span>
-                <h1>Vendor Souvenir Kantor <span class="text-accent">Surabaya & Indonesia Timur</span> (Custom &
-                    Express)</h1>
-                <p>Ubah persepsi klien Anda dengan souvenir premium. Pusat <b>Grosir Seminar Kit</b> dan <b>Cetak
-                        Souvenir Logo Perusahaan</b>. <b>Pengerjaan Express 7 Hari</b> (S&K Berlaku), kualitas garansi,
-                    dan desain custom yang <i>nggak malu-maluin</i>.</p>
+                <h1>Vendor Hampers <span class="text-accent">Malang</span> - Parcel & Gift Set Premium</h1>
+                <p>Buat momen spesial makin berkesan dengan hampers premium. Pusat <b>Parcel Lebaran</b>, <b>Hampers
+                        Natal</b>, dan <b>Gift Set Perusahaan</b>. <b>Packaging Eksklusif</b>, kualitas terjamin, dan
+                    pengiriman cepat ke seluruh <b>Malang Raya</b>.</p>
 
                 <div class="flex gap-4" style="margin-top: 2rem; flex-wrap: wrap;">
                     <a href="products.html" class="btn btn-primary">
-                        Lihat Katalog 2026 <i class="fa-solid fa-arrow-right"></i>
+                        Lihat Katalog Hampers <i class="fa-solid fa-arrow-right"></i>
                     </a>
                     <a href="https://wa.me/62895639068080" class="btn btn-secondary">
                         <i class="fa-brands fa-whatsapp"></i> Tanya Harga
@@ -176,7 +175,7 @@
                 <!-- Floating Elements (Decoration) -->
                 <div class="hero-float-badge"
                     style="position: absolute; bottom: 20px; left: 0; background:white; padding:10px; border:2px solid #1E293B; border-radius:12px; box-shadow: 4px 4px 0px #1E293B; z-index: 5; font-size: 0.9rem;">
-                    <i class="fa-solid fa-bolt text-tertiary"></i> <b>Express 7 Hari</b> Available!
+                    <i class="fa-solid fa-truck text-tertiary"></i> <b>Gratis Ongkir</b> Malang Raya!
                 </div>
             </div>
         </div>
@@ -654,9 +653,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
