--- a/package-deal-closer.html
+++ b/package-deal-closer.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/package-deal-closer.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-deal-closer.html">
     <title>The Deal Closer - Paket Souvenir VIP & Eksekutif | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Hadiah yang bikin Klien VIP mustahil melupakan Anda. Sempurna untuk closing deal, apresiasi investor, atau hadiah direksi.">
     <meta property="og:image" content="assets/cat-executive.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/package-deal-closer.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-deal-closer.html">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -284,9 +284,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
@@ -321,14 +321,14 @@
       "@type": "Product",
       "name": "The Deal Closer",
       "description": "Paket souvenir VIP exclusive hardbox. Isi: Powerbank Wireless, Metal Pen, E-Money.",
-      "image": "https://vendorsouvenir.web.id/assets/cat-executive.png",
+      "image": "https://hampersmalang.web.id/assets/cat-executive.png",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://vendorsouvenir.web.id/package-deal-closer.html",
+        "url": "https://hampersmalang.web.id/package-deal-closer.html",
         "priceCurrency": "IDR",
         "price": "250000",
         "availability": "https://schema.org/InStock",
