--- a/package-employee-kit.html
+++ b/package-employee-kit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/package-employee-kit.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-employee-kit.html">
     <title>The New Employee Kit - Welcome Pack Karyawan Baru | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Bikin karyawan baru merasa 'At Home' sejak hari pertama. Paket ini dirancang untuk meningkatkan moral tim dan employer branding perusahaan Anda.">
     <meta property="og:image" content="assets/pkg-onboarding.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/package-employee-kit.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-employee-kit.html">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -291,9 +291,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
@@ -328,14 +328,14 @@
       "@type": "Product",
       "name": "The New Employee Kit",
       "description": "Paket onboarding kit untuk karyawan baru. Termasuk hoodie, tumbler, dan laptop sleeve.",
-      "image": "https://vendorsouvenir.web.id/assets/pkg-onboarding.png",
+      "image": "https://hampersmalang.web.id/assets/pkg-onboarding.png",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://vendorsouvenir.web.id/package-employee-kit.html",
+        "url": "https://hampersmalang.web.id/package-employee-kit.html",
         "priceCurrency": "IDR",
         "price": "185000",
         "availability": "https://schema.org/InStock",
