--- a/products.html
+++ b/products.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/products.html">
-    <title>Katalog Souvenir Kantor Custom & Merchandise Promosi | Maroon Souvenir</title>
+    <link rel="canonical" href="https://hampersmalang.web.id/products.html">
+    <title>Katalog Hampers & Gift Set Premium Malang | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Katalog lengkap souvenir kantor custom logo: Tumbler, Flashdisk, Powerbank, Payung, Tas, dan Gift Set Eksklusif. Harga grosir & kualitas premium.">
+        content="Katalog lengkap hampers & gift set premium: Parcel Lebaran, Hampers Natal, Gift Box Perusahaan, dan Parcel Custom. Harga terjangkau & kualitas premium.">
     <meta name="keywords"
-        content="katalog souvenir kantor, daftar harga souvenir custom, grosir merchandise promosi, vendor souvenir surabaya, corporate gift catalog 2026">
+        content="katalog hampers malang, daftar harga parcel malang, grosir gift set malang, vendor hampers malang, hampers premium catalog">
     <meta name="author" content="Maroon Souvenir">
     <meta name="robots" content="index, follow">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Katalog Souvenir Kantor Custom & Merchandise Promosi">
+    <meta property="og:title" content="Katalog Hampers & Gift Set Premium Malang">
     <meta property="og:description"
-        content="Temukan ide souvenir kantor terbaik untuk event Anda. Custom logo, harga terjangkau, kualitas premium.">
+        content="Temukan ide hampers terbaik untuk momen spesial Anda. Custom branding, harga terjangkau, kualitas premium.">
     <meta property="og:image" content="assets/products-hero.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/products.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/products.html">
     <meta property="og:type" content="website">
 
     <!-- Schema Markup -->
@@ -31,12 +31,12 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Beranda",
-        "item": "https://vendorsouvenir.web.id/"
+        "item": "https://hampersmalang.web.id/"
       },{
         "@type": "ListItem",
         "position": 2,
         "name": "Katalog Produk",
-        "item": "https://vendorsouvenir.web.id/products.html"
+        "item": "https://hampersmalang.web.id/products.html"
       }]
     }
     </script>
@@ -481,9 +481,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
