--- a/rekomendasi-souvenir-kantor-2026.html
+++ b/rekomendasi-souvenir-kantor-2026.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/rekomendasi-souvenir-kantor-2026.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026.html">
     <title>Rekomendasi Souvenir Kantor 2026: Tren & Ide Produk Paling Dicari | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Jangan ketinggalan zaman! Simak 7 tren utama merchandise perusahaan yang akan mendominasi tahun 2026.">
     <meta property="og:image" content="assets/cat-executive.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/rekomendasi-souvenir-kantor-2026.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/rekomendasi-souvenir-kantor-2026.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -28,7 +28,7 @@
       "@context": "https://schema.org",
       "@type": "Article",
       "headline": "Rekomendasi Souvenir Kantor 2026: Tren & Ide Produk Paling Dicari",
-      "image": "https://vendorsouvenir.web.id/assets/cat-executive.png",
+      "image": "https://hampersmalang.web.id/assets/cat-executive.png",
       "author": {
         "@type": "Organization",
         "name": "Maroon Souvenir"
@@ -38,7 +38,7 @@
         "name": "Maroon Souvenir",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://vendorsouvenir.web.id/assets/logo.png"
+          "url": "https://hampersmalang.web.id/assets/logo.png"
         }
       },
       "datePublished": "2026-02-01",
@@ -402,7 +402,7 @@
 
     <!-- Sticky Share for Desktop -->
     <div class="sticky-share">
-        <a href="https://wa.me/?text=Tren%20Souvenir%20Kantor%202026%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+        <a href="https://wa.me/?text=Tren%20Souvenir%20Kantor%202026%3A%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
             class="share-icon bg-wa" title="Share ke WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
         <a href="#" class="share-icon bg-fb" title="Share ke Facebook"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="#" class="share-icon bg-li" title="Share ke LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -669,12 +669,12 @@
 
                     <!-- Share Mobile -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%202026%3A%20Tren%20%26%20Ide%20Produk%20Paling%20Dicari%20https%3A%2F%2Fvendorsouvenir.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Souvenir%20Kantor%202026%3A%20Tren%20%26%20Ide%20Produk%20Paling%20Dicari%20https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share WA</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin"></i> Share
                             LinkedIn</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Frekomendasi-souvenir-kantor-2026.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Frekomendasi-souvenir-kantor-2026.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook"></i> Share FB</a>
                     </div>
 
@@ -789,9 +789,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
             </div>
         </div>
