--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/about.html">
-    <title>Tentang Maroon Souvenir - Vendor Corporate Gift No.1 Surabaya & Indonesia Timur</title>
+    <link rel="canonical" href="https://hampersmalang.web.id/about.html">
+    <title>Tentang Maroon Souvenir - Vendor Corporate Gift No.1 Malang & Malang Raya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
-        content="Cerita di balik Maroon Souvenir, partner strategi branding perusahaan Anda. Spesialis pengadaan souvenir kantor custom, amanah, dan bergaransi di Surabaya.">
+        content="Cerita di balik Maroon Souvenir, partner strategi hampers & gift set perusahaan Anda. Spesialis parcel premium custom, amanah, dan bergaransi di Malang.">
     <meta name="keywords"
-        content="tentang maroon souvenir, profil vendor souvenir surabaya, perusahaan souvenir kantor terpercaya, supplier corporate gift indonesia timur">
+        content="tentang maroon souvenir, profil vendor hampers malang, perusahaan parcel terpercaya, supplier gift set malang raya">
     <meta name="author" content="Maroon Souvenir">
     <meta name="robots" content="index, follow">
 
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Lebih dari sekadar vendor, kami adalah partner strategis Anda dalam menciptakan corporate gift yang berkesan.">
     <meta property="og:image" content="assets/about-team.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/about.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/about.html">
     <meta property="og:type" content="website">
 
     <!-- Schema Markup -->
@@ -31,12 +31,12 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Beranda",
-        "item": "https://vendorsouvenir.web.id/"
+        "item": "https://hampersmalang.web.id/"
       },{
         "@type": "ListItem",
         "position": 2,
         "name": "Tentang Kami",
-        "item": "https://vendorsouvenir.web.id/about.html"
+        "item": "https://hampersmalang.web.id/about.html"
       }]
     }
     </script>
@@ -396,9 +396,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
