--- a/category-executive.html
+++ b/category-executive.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/category-executive.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-executive.html">
     <title>Souvenir Eksklusif VIP & Executive Gift Set | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Solusi bingung cari kado untuk Bos/Direksi. Leather Gift Set, Hardbox Premium, dan Signature Pen dengan inisial nama. Mewah & Eksklusif.">
     <meta property="og:image" content="assets/cat-executive.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/category-executive.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-executive.html">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -223,7 +223,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Souvenir Executive & VIP Gift Set",
       "description": "Koleksi souvenir mewah untuk direksi dan klien prioritas. Leather set, hardbox, dan signature pen.",
-      "url": "https://vendorsouvenir.web.id/category-executive.html",
+      "url": "https://hampersmalang.web.id/category-executive.html",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -232,28 +232,28 @@
             "position": 1,
             "name": "Leather Gift Set",
             "description": "Agenda kulit dan pen metal dalam box eksklusif.",
-            "image": "https://vendorsouvenir.web.id/assets/executive-leather.png"
+            "image": "https://hampersmalang.web.id/assets/executive-leather.png"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "Premium Hardbox",
             "description": "Packaging hardbox custom dengan poli emas.",
-            "image": "https://vendorsouvenir.web.id/assets/executive-hardbox.png"
+            "image": "https://hampersmalang.web.id/assets/executive-hardbox.png"
           },
           {
             "@type": "ListItem",
             "position": 3,
             "name": "Wallet & Card Holder",
             "description": "Dompet kulit dan tempat kartu nama custom nama.",
-            "image": "https://vendorsouvenir.web.id/assets/executive-wallet.png"
+            "image": "https://hampersmalang.web.id/assets/executive-wallet.png"
           },
           {
             "@type": "ListItem",
             "position": 4,
             "name": "Signature Pen",
             "description": "Pulpen metal premium style parker dengan grafir nama.",
-            "image": "https://vendorsouvenir.web.id/assets/executive-pen.png"
+            "image": "https://hampersmalang.web.id/assets/executive-pen.png"
           }
         ]
       }
@@ -414,9 +414,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
