--- a/category-express.html
+++ b/category-express.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/category-express.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-express.html">
     <title>Souvenir Express Ready Stock & Cetak Kilat 24 Jam | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Butuh souvenir besok? Kami punya stok gudang yang siap cetak kilat. Solusi penyelamat nyawa untuk event mendadak Anda.">
     <meta property="og:image" content="assets/hero-express.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/category-express.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-express.html">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -264,7 +264,7 @@
       "@type": "CollectionPage",
       "name": "Layanan Souvenir Express & Ready Stock",
       "description": "Koleksi souvenir ready stock gudang Surabaya yang bisa dicetak logo dalam 24 jam. Tumbler, Flashdisk, Notebook.",
-      "url": "https://vendorsouvenir.web.id/category-express.html",
+      "url": "https://hampersmalang.web.id/category-express.html",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -273,21 +273,21 @@
             "position": 1,
             "name": "Tumbler Ready Stock",
             "description": "Tumbler stainless polos siap cetak UV/Grafir.",
-            "image": "https://vendorsouvenir.web.id/assets/express-tumbler.png"
+            "image": "https://hampersmalang.web.id/assets/express-tumbler.png"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "Flashdisk Express",
             "description": "USB Flashdisk kartu dan metal siap cetak kilat.",
-            "image": "https://vendorsouvenir.web.id/assets/express-usb.png"
+            "image": "https://hampersmalang.web.id/assets/express-usb.png"
           },
           {
             "@type": "ListItem",
             "position": 3,
             "name": "Notebook Polos",
             "description": "Buku agenda A5 polos ready stock siap hotprint.",
-            "image": "https://vendorsouvenir.web.id/assets/express-notebook.png"
+            "image": "https://hampersmalang.web.id/assets/express-notebook.png"
           }
         ]
       }
@@ -453,9 +453,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
