--- a/category-seminar.html
+++ b/category-seminar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/category-seminar.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/category-seminar.html">
     <title>Paket Seminar Kit Kantor & Onboarding Welcome Kit | Maroon Souvenir Surabaya</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Solusi Paket Hemat untuk HRD & Event Organizer. Seminar Kit Basic hingga Onboarding Kit Premium. Pengerjaan Cepat.">
     <meta property="og:image" content="assets/cat-seminar.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/category-seminar.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/category-seminar.html">
     <meta property="og:type" content="website">
 
     <!-- Fonts & Icons -->
@@ -224,7 +224,7 @@
       "@type": "CollectionPage",
       "name": "Katalog Paket Seminar Kit Kantor",
       "description": "Paket seminar kit murah, training kit kantor, dan onboarding kit karyawan baru.",
-      "url": "https://vendorsouvenir.web.id/category-seminar.html",
+      "url": "https://hampersmalang.web.id/category-seminar.html",
       "mainEntity": {
         "@type": "ItemList",
         "itemListElement": [
@@ -447,9 +447,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
