--- a/merchandise-perusahaan-bisnis.html
+++ b/merchandise-perusahaan-bisnis.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/merchandise-perusahaan-bisnis.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/merchandise-perusahaan-bisnis.html">
     <title>Jasa Pembuatan Merchandise Perusahaan & Logo Bisnis Custom | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Strategi branding efektif lewat merchandise kantor custom. Temukan ide barang promosi yang elegan dan fungsional untuk klien.">
     <meta property="og:image" content="assets/merchandise-perusahaan-bisnis.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/merchandise-perusahaan-bisnis.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/merchandise-perusahaan-bisnis.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Jasa Pembuatan Merchandise Perusahaan & Bisnis Custom Logo",
             "image": [
-                "https://vendorsouvenir.web.id/assets/merchandise-perusahaan-bisnis.png",
-                "https://vendorsouvenir.web.id/assets/jasa-cetak-logo-merchandise.png",
-                "https://vendorsouvenir.web.id/assets/branding-kantor-profesional.png"
+                "https://hampersmalang.web.id/assets/merchandise-perusahaan-bisnis.png",
+                "https://hampersmalang.web.id/assets/jasa-cetak-logo-merchandise.png",
+                "https://hampersmalang.web.id/assets/branding-kantor-profesional.png"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://vendorsouvenir.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.png"
                 }
             },
             "datePublished": "2026-02-02",
@@ -583,11 +583,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Jasa%20Pembuatan%20Merchandise%20Perusahaan%20Profesional%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://wa.me/?text=Jasa%20Pembuatan%20Merchandise%20Perusahaan%20Profesional%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Fmerchandise-perusahaan-bisnis.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fmerchandise-perusahaan-bisnis.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -746,9 +746,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
