--- a/package-conference-pro.html
+++ b/package-conference-pro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/package-conference-pro.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-conference-pro.html">
     <title>The Conference Pro - Paket Seminar Kit Hemat & Fungsional | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Fungsional, ekonomis, dan pasti dipakai peserta. Solusi tepat untuk event seminar kampus, workshop, atau pelatihan massal.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/package-conference-pro.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-conference-pro.html">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -283,9 +283,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
@@ -320,14 +320,14 @@
       "@type": "Product",
       "name": "The Conference Pro",
       "description": "Paket seminar kit hemat untuk event massal. Isi: Tote bag, blocknote, pulpen, lanyard.",
-      "image": "https://vendorsouvenir.web.id/assets/seminar-kit.png",
+      "image": "https://hampersmalang.web.id/assets/seminar-kit.png",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://vendorsouvenir.web.id/package-conference-pro.html",
+        "url": "https://hampersmalang.web.id/package-conference-pro.html",
         "priceCurrency": "IDR",
         "price": "45000",
         "availability": "https://schema.org/InStock",
