--- a/package-earth-saver.html
+++ b/package-earth-saver.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/package-earth-saver.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-earth-saver.html">
     <title>The Earth Saver - Paket Souvenir Ramah Lingkungan & Eco Friendly | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tunjukkan komitmen ESG perusahaan Anda lewat souvenir ramah lingkungan. Cocok untuk program CSR atau BUMN.">
     <meta property="og:image" content="assets/cat-eco.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/package-earth-saver.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-earth-saver.html">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -285,9 +285,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
@@ -322,14 +322,14 @@
       "@type": "Product",
       "name": "The Earth Saver",
       "description": "Paket souvenir ramah lingkungan. Isi: Tumbler Bambu, Cutlery Kayu, Totebag Belacu.",
-      "image": "https://vendorsouvenir.web.id/assets/cat-eco.png",
+      "image": "https://hampersmalang.web.id/assets/cat-eco.png",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://vendorsouvenir.web.id/package-earth-saver.html",
+        "url": "https://hampersmalang.web.id/package-earth-saver.html",
         "priceCurrency": "IDR",
         "price": "95000",
         "availability": "https://schema.org/InStock",
