--- a/package-merchandise-exclusive.html
+++ b/package-merchandise-exclusive.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/package-merchandise-exclusive.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/package-merchandise-exclusive.html">
     <title>Paket Merchandise Eksklusif - Souvenir Kantor & Official Merch | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Merchandise branding kantor untuk dibagi ke karyawan atau dijual sebagai official merch. Kualitas premium standar distro.">
     <meta property="og:image" content="assets/express-tumbler.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/package-merchandise-exclusive.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/package-merchandise-exclusive.html">
     <meta property="og:type" content="product">
 
     <!-- Fonts & Icons -->
@@ -288,9 +288,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
@@ -325,14 +325,14 @@
       "@type": "Product",
       "name": "Paket Merchandise Eksklusif",
       "description": "Paket merchandise branding kantor kualitas distro. Isi: Tumbler, Tote Bag, Payung, Apparel.",
-      "image": "https://vendorsouvenir.web.id/assets/express-tumbler.png",
+      "image": "https://hampersmalang.web.id/assets/express-tumbler.png",
       "brand": {
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://vendorsouvenir.web.id/package-merchandise-exclusive.html",
+        "url": "https://hampersmalang.web.id/package-merchandise-exclusive.html",
         "priceCurrency": "IDR",
         "price": "125000",
         "availability": "https://schema.org/InStock",
