--- a/paket-seminar-eksklusif.html
+++ b/paket-seminar-eksklusif.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/paket-seminar-eksklusif.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/paket-seminar-eksklusif.html">
     <title>Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tingkatkan prestise acara Anda dengan seminar kit kelas atas. Paket hardbox dengan isi premium untuk pembicara dan tamu VVIP.">
     <meta property="og:image" content="assets/seminar-premium.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/paket-seminar-eksklusif.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/paket-seminar-eksklusif.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Paket Seminar Kit Eksklusif Eksklusif: Standar Baru Acara Korporat",
             "image": [
-                "https://vendorsouvenir.web.id/assets/seminar-premium.png",
-                "https://vendorsouvenir.web.id/assets/executive-hardbox.png",
-                "https://vendorsouvenir.web.id/assets/executive-leather.png"
+                "https://hampersmalang.web.id/assets/seminar-premium.png",
+                "https://hampersmalang.web.id/assets/executive-hardbox.png",
+                "https://hampersmalang.web.id/assets/executive-leather.png"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://vendorsouvenir.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.png"
                 }
             },
             "datePublished": "2026-02-01",
@@ -578,11 +578,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Rekomendasi%20Paket%20Seminar%20VIP%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://wa.me/?text=Rekomendasi%20Paket%20Seminar%20VIP%20dari%20Maroon%20Souvenir%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Fpaket-seminar-eksklusif.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fpaket-seminar-eksklusif.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -740,9 +740,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
