--- a/souvenir-akhir-tahun-kalender.html
+++ b/souvenir-akhir-tahun-kalender.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/souvenir-akhir-tahun-kalender.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender.html">
     <title>Souvenir Akhir Tahun Kantor: Kalender 2026 & Agenda Eksklusif | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Mengapa kalender dan agenda masih menjadi souvenir paling powerful? Temukan strateginya di sini.">
     <meta property="og:image" content="assets/souvenir-kalender-agenda-tahun-baru.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/souvenir-akhir-tahun-kalender.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Souvenir Akhir Tahun: Investasi Branding 365 Hari dengan Kalender & Agenda",
             "image": [
-                "https://vendorsouvenir.web.id/assets/souvenir-kalender-agenda-tahun-baru.png",
-                "https://vendorsouvenir.web.id/assets/kalender-meja-2026-modern.png"
+                "https://hampersmalang.web.id/assets/souvenir-kalender-agenda-tahun-baru.png",
+                "https://hampersmalang.web.id/assets/kalender-meja-2026-modern.png"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://vendorsouvenir.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.png"
                 }
             },
             "datePublished": "2026-02-02",
@@ -563,11 +563,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Cetak%20Kalender%20dan%20Agenda%202026%20Premium%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://wa.me/?text=Cetak%20Kalender%20dan%20Agenda%202026%20Premium%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-akhir-tahun-kalender.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-akhir-tahun-kalender.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -725,9 +725,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
