--- a/souvenir-ramah-lingkungan.html
+++ b/souvenir-ramah-lingkungan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/souvenir-ramah-lingkungan.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/souvenir-ramah-lingkungan.html">
     <title>Koleksi Souvenir Kantor Ramah Lingkungan (Sustainable Gifts) | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Saatnya beralih ke souvenir yang berdampak positif. Kurangi plastik, pilih Bambu & Daur Ulang. Tingkatkan citra perusahaan hijau Anda.">
     <meta property="og:image" content="assets/souvenir-ramah-lingkungan.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/souvenir-ramah-lingkungan.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/souvenir-ramah-lingkungan.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article, FAQ, Breadcrumb) -->
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Koleksi Souvenir Kantor Ramah Lingkungan (Sustainable Gifts)",
             "image": [
-                "https://vendorsouvenir.web.id/assets/souvenir-ramah-lingkungan.png",
-                "https://vendorsouvenir.web.id/assets/cat-eco.png"
+                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.png",
+                "https://hampersmalang.web.id/assets/cat-eco.png"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://vendorsouvenir.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.png"
                 }
             },
             "datePublished": "2026-02-01",
@@ -558,11 +558,11 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Ramah%20Lingkungan%20(Eco-Green)%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://wa.me/?text=Inspirasi%20Souvenir%20Ramah%20Lingkungan%20(Eco-Green)%3A%20https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Fsouvenir-ramah-lingkungan.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Fsouvenir-ramah-lingkungan.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -753,9 +753,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
