--- a/tips-memilih-paket-seminar.html
+++ b/tips-memilih-paket-seminar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/tips-memilih-paket-seminar.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tips-memilih-paket-seminar.html">
     <title>Tips Memilih Paket Seminar Kit Efektif & Hemat Budget | Panduan 2026</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -17,7 +17,7 @@
     <meta property="og:description"
         content="Jangan sampai seminar kit Anda berakhir di tempat sampah! Simak strategi memilih item yang fungsional, elegan, dan tetap ramah di kantong.">
     <meta property="og:image" content="assets/seminar-kit.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/tips-memilih-paket-seminar.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tips-memilih-paket-seminar.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data -->
@@ -26,7 +26,7 @@
       "@context": "https://schema.org",
       "@type": "Article",
       "headline": "Tips Memilih Paket Seminar Kit Efektif & Hemat Budget",
-      "image": "https://vendorsouvenir.web.id/assets/seminar-kit.png",
+      "image": "https://hampersmalang.web.id/assets/seminar-kit.png",
       "author": {
         "@type": "Organization",
         "name": "Maroon Souvenir"
@@ -36,7 +36,7 @@
         "name": "Maroon Souvenir",
         "logo": {
           "@type": "ImageObject",
-          "url": "https://vendorsouvenir.web.id/assets/logo.png"
+          "url": "https://hampersmalang.web.id/assets/logo.png"
         }
       },
       "datePublished": "2026-01-20",
@@ -530,16 +530,16 @@
 
                             <!-- Share Buttons -->
                             <div class="share-container">
-                                <a href="https://wa.me/?text=5%20Tips%20Memilih%20Paket%20Seminar%20Kit%20Efektif%20%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://wa.me/?text=5%20Tips%20Memilih%20Paket%20Seminar%20Kit%20Efektif%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
                                     class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share
                                     ke WhatsApp</a>
-                                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
                                     class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i>
                                     Facebook</a>
-                                <a href="https://twitter.com/intent/tweet?text=Tips%20Memilih%20Seminar%20Kit&url=https%3A%2F%2Fvendorsouvenir.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://twitter.com/intent/tweet?text=Tips%20Memilih%20Seminar%20Kit&url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
                                     class="share-btn bg-tw" target="_blank"><i class="fa-brands fa-twitter"></i>
                                     Twitter</a>
-                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Ftips-memilih-paket-seminar.html"
+                                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftips-memilih-paket-seminar.html"
                                     class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                                     LinkedIn</a>
                             </div>
@@ -682,9 +682,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
