--- a/tumbler-bambu-grafir.html
+++ b/tumbler-bambu-grafir.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/tumbler-bambu-grafir.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-bambu-grafir.html">
     <title>Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian | Maroon Souvenir</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Tunjukkan kepedulian lingkungan Anda dengan souvenir Tumbler Bambu. Desain natural, jeroan stainless tahan panas, dan grafir logo yang abadi.">
     <meta property="og:image" content="assets/eco-bamboo.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/tumbler-bambu-grafir.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-bambu-grafir.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (Article & FAQ) -->
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Tumbler Bambu: Kombinasi Estetika Alam dan Teknologi Stainless",
             "image": [
-                "https://vendorsouvenir.web.id/assets/eco-bamboo.png",
-                "https://vendorsouvenir.web.id/assets/eco-bag.png"
+                "https://hampersmalang.web.id/assets/eco-bamboo.png",
+                "https://hampersmalang.web.id/assets/eco-bag.png"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://vendorsouvenir.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.png"
                 }
             },
             "datePublished": "2026-02-01",
@@ -544,12 +544,12 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Tumbler%20Bambu%20estetik%20dan%20unik%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://wa.me/?text=Tumbler%20Bambu%20estetik%20dan%20unik%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-bambu-grafir.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-bambu-grafir.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -693,9 +693,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
