--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vendorsouvenir.web.id/tumbler-stainless-vacuum.html">
+    <link rel="canonical" href="https://hampersmalang.web.id/tumbler-stainless-vacuum.html">
     <title>Tumbler Stainless Steel Vacuum Custom - Souvenir Thermos Premium Tahan Panas</title>
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
@@ -19,7 +19,7 @@
     <meta property="og:description"
         content="Cetak logo perusahaan di tumbler stainless premium (Thermos). Tahan panas 12 jam, anti bocor, dan elegan.">
     <meta property="og:image" content="assets/drinkware-thermos.png">
-    <meta property="og:url" content="https://vendorsouvenir.web.id/tumbler-stainless-vacuum.html">
+    <meta property="og:url" content="https://hampersmalang.web.id/tumbler-stainless-vacuum.html">
     <meta property="og:type" content="article">
 
     <!-- Structured Data (FAQ & Product) -->
@@ -28,7 +28,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Tumbler Stainless Vacuum Custom",
-      "image": "https://vendorsouvenir.web.id/assets/drinkware-thermos.png",
+      "image": "https://hampersmalang.web.id/assets/drinkware-thermos.png",
       "description": "Tumbler stainless steel dengan teknologi double wall vacuum insulation, mampu menahan suhu panas/dingin hingga 12 jam. Cocok untuk souvenir kantor premium.",
       "brand": {
         "@type": "Brand",
@@ -593,14 +593,14 @@
 
                     <!-- Share Buttons -->
                     <div class="share-container">
-                        <a href="https://wa.me/?text=Tumbler%20Stainless%20Vacuum%20Premium%20%3A%20https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://wa.me/?text=Tumbler%20Stainless%20Vacuum%20Premium%20%3A%20https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
                             class="share-btn bg-wa" target="_blank"><i class="fa-brands fa-whatsapp"></i> Share ke
                             WhatsApp</a>
-                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
                             class="share-btn bg-fb" target="_blank"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
-                        <a href="https://twitter.com/intent/tweet?text=Tumbler%20Stainless%20Vacuum%20Premium&url=https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://twitter.com/intent/tweet?text=Tumbler%20Stainless%20Vacuum%20Premium&url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
                             class="share-btn bg-tw" target="_blank"><i class="fa-brands fa-twitter"></i> Twitter</a>
-                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fvendorsouvenir.web.id%2Ftumbler-stainless-vacuum.html"
+                        <a href="https://www.linkedin.com/sharing/share-offsite/?url=https%3A%2F%2Fhampersmalang.web.id%2Ftumbler-stainless-vacuum.html"
                             class="share-btn bg-li" target="_blank"><i class="fa-brands fa-linkedin-in"></i>
                             LinkedIn</a>
                     </div>
@@ -757,9 +757,9 @@
             <div>
                 <h4>Kontak</h4>
                 <ul style="opacity: 0.8; margin-bottom: 1.5rem;">
-                    <li><i class="fa-solid fa-location-dot"></i> Surabaya & Indonesia Timur</li>
+                    <li><i class="fa-solid fa-location-dot"></i> Malang & Malang Raya</li>
                     <li><i class="fa-brands fa-whatsapp"></i> +62 895 6390 68080</li>
-                    <li><i class="fa-solid fa-envelope"></i> sales@vendorsouvenir.web.id</li>
+                    <li><i class="fa-solid fa-envelope"></i> sales@hampersmalang.web.id</li>
                 </ul>
                 <div class="md-margin-0"
                     style="background: white; padding: 10px; border-radius: 8px; width: fit-content; margin: 0 auto;">
